include/hybridengine/bind/ms_bind.h

typedef struct ms_engine ms_engine;   // HybridEngine::App::Engine*
typedef struct ms_go ms_go;           // HybridEngine::Core::SceneObject*
typedef struct ms_asset ms_asset;     // 资产句柄（绑定层包装）
typedef int64_t ms_id;                // InstanceId（uint64→C# long；设计 long——Windows long=32 修正为 int64_t）
/* ---- 对象/组件 ---- */
MS_API ms_id      ms_go_instance_id(ms_engine* e, ms_go* g);
MS_API int        ms_go_set_active(ms_engine* e, ms_go* g, int active);
MS_API int        ms_go_destroy(ms_engine* e, ms_go* g);
MS_API int        ms_go_add_child(ms_engine* e, ms_go* g, const char* name, ms_go** outGo);
MS_API int        ms_go_name(ms_engine* e, ms_go* g, char* out, int cap);
MS_API int        ms_go_set_name(ms_engine* e, ms_go* g, const char* name);
MS_API int        ms_go_child_count(ms_engine* e, ms_go* g, int* outCount);
MS_API int        ms_go_child_get(ms_engine* e, ms_go* g, int index, ms_go** outGo);
MS_API int        ms_go_remove_component(ms_engine* e, ms_go* g, const char* scriptType);
typedef struct ms_component_spec {
    const char* scriptType;    // C# 完全限定名（反射注册键代理）
    ms_cb_void  onAwake;
    ms_cb_void  onEnable;
    ms_cb_void  onStart;
    ms_cb_void  onDisable;
    ms_cb_void  onDestroy;
    ms_cb_dt    onUpdate;
    ms_cb_dt    onFixedUpdate;
    ms_cb_dt    onLateUpdate;
    void*       userData;      // C# 实例 GCHandle（C# 拥有——GameEngine.Dispose 释放）
} ms_component_spec;
MS_API int ms_component_register(ms_engine* e, const ms_component_spec* spec);
/* t-bind-h2：**为指定对象注册专属 spec**（同一注册键可为多个对象各存一份回调表）。
   为什么需要：注册键是写进场景文件的 type 字段，场景重放**必须沿用它**——于是
   "对象 A 挂 Foo#1 仍存活时附加加载一份同样含 Foo#1 的场景"必然出现同键双实例。
   若只有按类型键的共享条目，重放的注册会覆盖 A 的条目 → A 的组件改调重放实例的回调
   （A 的 Update 丢失）、托管侧查询也串到对方实例。
   owner=nullptr 时等价于 ms_component_register（按类型共享），调用方不必特判。
   绑定层在"新建组件"与"重放补挂"两条路径上都应优先用本入口。 */
MS_API int ms_component_register_for(ms_engine* e, ms_go* owner, const ms_component_spec* spec);
MS_API int ms_go_add_component(ms_engine* e, ms_go* g, const char* scriptType);
MS_API int ms_go_get_component(ms_engine* e, ms_go* g, const char* scriptType, void** outReflected);
/* ---- P1-a：组件级 enabled（组件开关——经 Component::SetEnabled → LifecycleDriver::SetActive） ----
   语义：值变化才触发（OnDisable/OnEnable 成对回调；同值=空操作）；enabled=0 的组件被 LifecycleDriver 跳过
        （Start/FixedUpdate/Update/LateUpdate 均不再分派——Unity 组件开关语义）。
   scriptType 查找口径与 ms_go_remove_component 完全一致：脚本组件=per-instance 注册键（FullName#N，
   由 ms_go_add_component 的 spec.scriptType 决定）；C++ 组件=ReflectionRegistry RTTI 类型名。
   未找到=MS_ERR_NOT_FOUND（outOn 置 0）；on 非 0/1=按 !=0 归一。 */
MS_API int ms_component_set_enabled(ms_engine* e, ms_go* g, const char* scriptType, int on);
MS_API int ms_component_get_enabled(ms_engine* e, ms_go* g, const char* scriptType, int* outOn);
/* ---- P1-b：组件存在性查询（原生组件 + 脚本组件统一口径——托管 GetComponent<T>() 代理包装用） ----
   查找口径与 ms_component_set_enabled 一致：脚本组件=per-instance 注册键；C++ 组件=RTTI 注册名
   （如 "MeshVisual"/"CameraComponent"/"LightComponent"/"SpriteVisual"）。
   查询语义：缺失**不算错误**——对象句柄有效=MS_BIND_OK 且 outPresent=0/1；句柄/出参非法=MS_ERR_BAD_ARG。
   注：同一对象可挂多个同类型原生组件（C++ AddComponent<T> 不去重）——本函数与 GetComponent<T> 同为「首个命中」。 */
MS_API int ms_go_has_component(ms_engine* e, ms_go* g, const char* typeName, int* outPresent);
/* ---- P1-a：引擎帧钩子（托管每帧服务——Invoke/InvokeRepeating、协程调度、托管 Time 同步） ----
   每帧在 Engine::Tick 内按 phase 调用两次（同一次注册，两个相位）：
     phase=0（帧首）：Time 已推进、组件回调之前——托管侧同步 Time.deltaTime/time/frameCount，
                      保证组件 Update 内读到的是本帧 dt（硬约束：晚于 Lifecycle 会让组件读到上一帧值）。
     phase=1（帧尾）：Lifecycle 全序（Start/FixedUpdate/Update/LateUpdate/销毁队列）之后、Events Flush 之前
                      ——托管侧推进 Invoke 与协程（与托管 RunFrame 既有「Update 后」语义一致）。
   dt=本帧时长。cb=null 解绑；重复注册=替换（后注册者生效）；单线程（创建引擎的线程）。
   存在理由：托管每帧服务若只挂在 GameEngine.RunFrame 上，编辑器直驱 Engine::Tick 的 Play 路径不会执行它。 */
typedef void (*ms_cb_frame)(void* userData, double dt, int phase);
MS_API int ms_engine_set_frame_hook(ms_engine* e, ms_cb_frame cb, void* userData);
/* ---- 3D：用户场景真 3D（MeshVisual/CameraComponent——Engine::Render 用户场景路径走 Render3D 光栅） ----
   用法：ms_scene_add_root → (可选 ms_go_add_child 骨骼层级) → ms_transform_set（世界矩阵组合）
       → ms_go_add_mesh_visual + ms_go_set_mesh（网格=三角形展开）→ ms_go_add_camera + ms_camera_set
       → ms_engine_render（场景含 MeshVisual→3D 光栅：透视/深度/朗伯；无相机=默认街拍位） */
MS_API int ms_go_add_mesh_visual(ms_engine* e, ms_go* g);                                 // 挂 MeshVisual（网格空=不绘制）
MS_API int ms_go_set_mesh(ms_engine* e, ms_go* g, const double* vertsXYZ, int triCount, uint32_t color);   // 填网格（tri×9 doubles 行序；法线缺省=面法线）
MS_API int ms_go_add_camera(ms_engine* e, ms_go* g);                                     // 挂 CameraComponent
MS_API int ms_camera_set(ms_engine* e, ms_go* g, const double* eye, const double* target, double fovDeg, int ortho, double orthoSize);   // 相机看向 target；ortho!=0=正交(orthoSize)
/* ---- 2D：SpriteVisual（纯引擎 2D 场景内容——世界坐标=屏幕像素/原点=屏幕中心；order 大者在上） ---- */
MS_API int ms_go_add_sprite_visual(ms_engine* e, ms_go* g);
MS_API int ms_sprite_set(ms_engine* e, ms_go* g, double cr, double cg, double cb, double ca,
                         double width, double height, const char* textureAsset);
/* ---- M5：3D 光照/材质/统计（多光源 Blinn-Phong + 透明 + 雾 + 视锥剔除——引擎用户场景路径） ----
   光照：ms_go_add_light（挂 LightComponent）→ ms_light_set（参数）→ ms_engine_render（与 RasterOptions 主光叠加）
         ⚠ 场景光**有效上限 7 盏/帧**（实测 2026-09-17 修正；此前注释误写"最多 8"）：
           收集端收 8 个，但着色端 8 槽恒被 legacy 主光占 1 槽 → 第 8 盏被静默丢弃。
           要"每盏都确定生效"请配 ≤6 盏（留 1 盏余量给默认主光）。
           默认主光是否有像素贡献取决于几何：其方向默认 (-0.5,-0.7,-0.5)，背向它的面贡献 0。
   透明：ms_go_set_mesh 的 color 0xAARRGGBB 高 8 位 alpha<FF → 自动进透明队列（End 远→近排序混合，无需额外调用）
   材质：ms_go_set_material（高光/自发光——内存态；.hmat 资产可持久化同名参数） */
MS_API int ms_go_add_light(ms_engine* e, ms_go* g);                                  // 挂 LightComponent（默认方向光）
// 光源参数：type 0=方向光 1=点光 2=聚光；position/direction/color=各 3 double（color 0..1）；
//   direction：方向光=指向光源方向；聚光=光锥轴向（光源→照射方向）；range=0 无距离衰减；innerDeg/outerDeg=聚光内外角
MS_API int ms_light_set(ms_engine* e, ms_go* g, int type, const double* position, const double* direction,
                        const double* color, double intensity, double range, double innerDeg, double outerDeg);
MS_API int ms_light_enable(ms_engine* e, ms_go* g, int on);                          // 光源开关（enabled）
// 材质参数（MeshVisual.mesh）：specular 高光强度（0=关——legacy 观感）/shininess 指数（>=1，钳制）/emissive 0..1（可空）
MS_API int ms_go_set_material(ms_engine* e, ms_go* g, double specular, double shininess, const double* emissive);
// 最近一帧用户场景 3D 统计（8×uint64 顺序：submitted/drawn/culledMeshes/culledTriangles/clipped/shaded/blended/sortedDraws）
// 返回写入数（cap 截断；无 3D 帧=0）——剔除/性能观测用
MS_API int ms_engine_render3d_stats(ms_engine* e, uint64_t* out, int cap);
/* ---- 变换 ---- */
MS_API int  ms_transform_get(ms_engine* e, ms_go* g, const char* field, double* out);  // pos(3)/rot(4 wxyz quat)/scale(3)
MS_API int  ms_transform_set(ms_engine* e, ms_go* g, const char* field, const double* in);
MS_API ms_id ms_transform_parent(ms_engine* e, ms_go* g);
MS_API int  ms_transform_set_parent(ms_engine* e, ms_go* g, ms_id parentId, int keepWorld);
/* ---- C# 脚本桥（M3.4：types/fields/set 三回调——编辑器脚本字段经绑定） ---- */
typedef int (*ms_cb_script_fields)(void* userData, const char* instanceKey, char* outJson, int cap);
typedef int (*ms_cb_script_field_set)(void* userData, const char* instanceKey, const char* field, const char* jsonValue);
typedef int (*ms_cb_script_types)(void* userData, char* outJson, int cap);
MS_API int ms_script_bridge_register(ms_engine* e, void* userData, ms_cb_script_fields fieldsFn, ms_cb_script_field_set setFn, ms_cb_script_types typesFn);
// t-graph-script：**方法调用回调**（托管侧反射 Invoke）。单独注册=纯增量，不改既有 4 参注册的签名。
// outResult 收返回值（void → 0）；返回 MS_BIND_OK=调用成功。
typedef int (*ms_cb_script_call)(void* userData, const char* instanceKey, const char* method, double arg, double* outResult);
MS_API int ms_script_bridge_register_call(ms_engine* e, ms_cb_script_call callFn);
// t-graph-member：**脚本成员清单回调**（类型 → 可调方法 / 可读写字段，JSON）。同样是纯增量注册。
typedef int (*ms_cb_script_members)(void* userData, char* outJson, int cap);
MS_API int ms_script_bridge_register_members(ms_engine* e, ms_cb_script_members membersFn);
MS_API int ms_script_fields(ms_engine* e, const char* instanceKey, char* outJson, int cap);
MS_API int ms_script_field_set(ms_engine* e, const char* instanceKey, const char* field, const char* jsonValue);
MS_API int ms_script_types(ms_engine* e, char* outJson, int cap);
/* ---- P1-a：脚本组件重放（场景加载——scriptFields → 托管实例重建） ----
   背景：脚本组件在场景里以「保存时的 per-instance 注册键」(FullName#N) 落盘，ReflectionRegistry 对它没有工厂，
   因此加载需要托管侧重建实例。流程（ms_scene_load 内部，桥 + 本回调均就绪时）：
     1) 反序列化时按注册键形状（*#数字）认领脚本条目 → 建占位 BindComponent（回调全空=静默）；
     2) 旧场景经 Scene::RemoveRoot 拆除（触发 OnDisable/OnDestroy → 托管登记清退）；
     3) 装载新场景，对每个脚本条目调用 replayFn(go, savedKey, fieldsJson)：
        托管侧建实例、按 savedKey 重新 ms_component_register（同键就地更新 → 已存在的 BindComponent
        立即取到新回调）、补挂 Owner/sceneObject 视图、回填 scriptFields。
   返回 0=成功；非 0=该条目重放失败（ms_scene_load 透传该码）。
   savedKey=保存时的注册键（托管侧沿用，保证再次保存无键漂移）；fieldsJson=scriptFields 原文（可空串）。 */
typedef int (*ms_cb_script_replay)(void* userData, ms_go* go, const char* savedKey, const char* fieldsJson);
MS_API int ms_script_replay_register(ms_engine* e, ms_cb_script_replay replayFn, void* userData);
/* ---- 反射属性（M2 ReflectionRegistry 经 ABI——M25-e JSON 传输） ---- */
MS_API int ms_property_get(ms_engine* e, ms_go* g, const char* type, const char* field, char* outJson, int cap);
MS_API int ms_property_set(ms_engine* e, ms_go* g, const char* type, const char* field, const char* jsonIn);
MS_API int ms_property_fields(ms_engine* e, const char* type, char* outJson, int cap);
/* ---- 资产（句柄） ---- */
MS_API ms_asset* ms_assets_load(ms_engine* e, const char* assetPath, int* err);
MS_API int    ms_assets_type(ms_engine* e, ms_asset* a, char* outType, int cap);
MS_API int    ms_assets_guid(ms_engine* e, ms_asset* a, char* outGuid, int cap);
MS_API void   ms_assets_unref(ms_engine* e, ms_asset* a);
MS_API int    ms_assets_set_root(ms_engine* e, const char* absRoot);   // 项目根（C# 侧 Save/Load 前置）
MS_API int    ms_assets_save(ms_engine* e, const char* assetPath, const void* data, int bytes, const char* type);  // 二进制安全（save_text 的超集）
MS_API int    ms_assets_save_text(ms_engine* e, const char* assetPath, const char* payload, const char* type);
MS_API int    ms_assets_instantiate_prefab(ms_engine* e, const char* assetPath, ms_go** outGo);   // 预制体实例化→场景
/* ---- 资产列表 & 纹理像素（t7：X5 管线闭环——曲库/封面/图标「资产→渲染」） ----
   ms_assets_list：dir 递归 List（类型表过滤——复用 AssetLibrary::List）→ JSON 字符串数组（["Assets/a.bmp",...]）；
   out 缓冲不足（cap 溢出）=MS_ERR_BAD_ARG（文档化）；root 未设=空数组。
   ms_assets_texture_pixels：Texture 像素**借出指针**（句柄（ms_assets_unref/引擎销毁）存活期间有效——零拷贝直读；
   句柄失效后禁用（未定义——不代表可访问）；w/h/stride 出参——**stride = 输出像素缓冲的行 pitch（恒为 w*4 字节）**，
   即按 `pixels[y * (stride/4) + x]` 索引；**不是**源文件行字节数（BMP 源行含 4 字节对齐填充、
   PNG 源扫描行是 w*通道数，两者与输出 pitch 都不同——按源侧值当 pitch 走行会读错行）；非 Texture=MS_ERR_BAD_TYPE。 */
MS_API int    ms_assets_list(ms_engine* e, const char* dir, char* outJson, int cap);
MS_API int    ms_assets_texture_pixels(ms_engine* e, ms_asset* a, int* outW, int* outH, int* outStride, uint32_t** outPixels);
/* ---- 错误文案（t2：错误码→人类可读 UTF-8；仅新增——不改任何既有函数/ABI） ---- */
MS_API const char* ms_bind_error_text(int code);   // 静态 UTF-8 文案（调用方只读不释放）；未知码="未知错误码"
// t-graph-script：给节点图装上**脚本出口**（读写脚本字段 / 调用脚本方法）——启动时调一次
MS_API int ms_graph_enable_scripts(ms_engine* e);